postgresql/postgres-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-tcp
  namespace: postgres
  labels:
    app: postgres
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`*`)
    services:
    - name: postgres
      port: 5432
